--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           </ul>
         </nav>
         <a href="cart.html"><img src="./images/cart.jpg" alt="" width="30px" height="30px" /></a>
-        <img src="/images/menuicon.jpg" alt="" class="menu-icon" onclick="menutoggle()" />
+        <img src="./images/menuicon.jpg" alt="" class="menu-icon" onclick="menutoggle()" />
       </div>
       <div class="row">
         <div class="col-2">
@@ -41,7 +41,7 @@
           <a href="#" target="_blank" rel="noopener noreferrer" class="btn">Explore Now →</a>
         </div>
         <div class="col-2">
-          <img src="/images/menu icon.png" alt="" />
+          <img src="./images/menu icon.png" alt="" />
         </div>
       </div>
     </div>
@@ -51,13 +51,13 @@
     <div class="small-container">
       <div class="row">
         <div class="col-3">
-          <img src="/images/attire4.jpg" alt="" />
+          <img src="./images/attire4.jpg" alt="" />
         </div>
         <div class="col-3">
-          <img src="/images/attire2.jpg" alt="" />
+          <img src="./images/attire2.jpg" alt="" />
         </div>
         <div class="col-3">
-          <img src="/images/attire3.jpg" alt="" />
+          <img src="./images/attire3.jpg" alt="" />
         </div>
       </div>
     </div>
@@ -68,7 +68,7 @@
     <h2 class="title">Featured Products</h2>
     <div class="row">
       <div class="col-4">
-        <a href="product_details.html"><img src="/images/shirt1.jpg" alt="" /></a>
+        <a href="product_details.html"><img src="./images/shirt1.jpg" alt="" /></a>
         <a href="product_details.html">
           <h4>Black Printed T-shirt</h4>
         </a>
@@ -83,7 +83,7 @@
       </div>
   
       <div class="col-4">
-        <img src="/images/shirt2.jpg" alt="" />
+        <img src="./images/shirt2.jpg" alt="" />
         <h4>Black shoes</h4>
         <div class="rating">
           <i class="fas fa-star"></i>
@@ -96,7 +96,7 @@
       </div>
   
       <div class="col-4">
-        <img src="/images/shirt3.jpg" alt="" />
+        <img src="./images/shirt3.jpg" alt="" />
         <h4>Sports Jersey</h4>
         <div class="rating">
           <i class="fas fa-star"></i>
@@ -109,7 +109,7 @@
       </div>
   
       <div class="col-4">
-        <img src="/images/attire5.jpg" alt="" />
+        <img src="./images/attire5.jpg" alt="" />
         <h4>Blue Trackpants</h4>
         <div class="rating">
           <i class="fas fa-star"></i>
@@ -124,7 +124,7 @@
     <h2 class="title">Latest Products</h2>
     <div class="row">
       <div class="col-4">
-        <img src="/images/bottom10.jpg" alt="" />
+        <img src="./images/bottom10.jpg" alt="" />
         <h4>Black Gym Trackpants</h4>
         <div class="rating">
           <i class="fas fa-star"></i>
@@ -137,7 +137,7 @@
       </div>
   
       <div class="col-4">
-        <img src="/images/bottom2.jpg" alt="" />
+        <img src="./images/bottom2.jpg" alt="" />
         <h4>Grey Gym Sporty Jacket</h4>
         <div class="rating">
           <i class="fas fa-star"></i>
@@ -150,7 +150,7 @@
       </div>
   
       <div class="col-4">
-        <img src="/images/bottom6.jpg" alt="" />
+        <img src="./images/bottom6.jpg" alt="" />
         <h4>Rosegold Ladies Watch</h4>
         <div class="rating">
           <i class="fas fa-star"></i>
@@ -163,7 +163,7 @@
       </div>
   
       <div class="col-4">
-        <img src="/images/bottom3.jpg" alt="" />
+        <img src="./images/bottom3.jpg" alt="" />
         <h4>Grey and Orange Shoes</h4>
         <div class="rating">
           <i class="fas fa-star"></i>
@@ -178,7 +178,7 @@
   
     <div class="row">
       <div class="col-4">
-        <img src="/images/bottom5.jpg" alt="" />
+        <img src="./images/bottom5.jpg" alt="" />
         <h4>Ladies Smartwatch</h4>
         <div class="rating">
           <i class="fas fa-star"></i>
@@ -191,7 +191,7 @@
       </div>
   
       <div class="col-4">
-        <img src="/images/bottom8.jpg" alt="" />
+        <img src="./images/bottom8.jpg" alt="" />
         <h4>Red printed Jersey</h4>
         <div class="rating">
           <i class="fas fa-star"></i>
@@ -204,7 +204,7 @@
       </div>
   
       <div class="col-4">
-        <img src="/images/bottom4.jpg" alt="" />
+        <img src="./images/bottom4.jpg" alt="" />
         <h4>Sneakers for women</h4>
         <div class="rating">
           <i class="fas fa-star"></i>
@@ -217,7 +217,7 @@
       </div>
   
       <div class="col-4">
-        <img src="/images/bottom7.jpg" alt="" />
+        <img src="./images/bottom7.jpg" alt="" />
         <h4>Grey strap watch for men</h4>
         <div class="rating">
           <i class="fas fa-star"></i>
@@ -235,7 +235,7 @@
     <div class="small-container">
       <div class="row">
         <div class="col-2">
-          <img src="/images/exclusive1.png" alt="" class="offer-img" />
+          <img src="./images/exclusive1.png" alt="" class="offer-img" />
         </div>
         <div class="col-2">
           <p>Exclusively Available on NewStore</p>
@@ -264,7 +264,7 @@
             <i class="far fa-star"></i>
             <i class="far fa-star"></i>
           </div>
-          <img src="/images/test1.jpg" alt="" />
+          <img src="./images/test1.jpg" alt="" />
           <h3>Lionel Messi</h3>
         </div>
   
@@ -280,7 +280,7 @@
             <i class="far fa-star"></i>
             <i class="far fa-star"></i>
           </div>
-          <img src="/images/test2.jpg" alt="" />
+          <img src="./images/test2.jpg" alt="" />
           <h3>Sachin Tendulkar</h3>
         </div>
   
@@ -296,7 +296,7 @@
             <i class="far fa-star"></i>
             <i class="far fa-star"></i>
           </div>
-          <img src="/images/test4.jpg" alt="" />
+          <img src="./images/test4.jpg" alt="" />
           <h3>Novak Djokovic</h3>
         </div>
       </div>
@@ -307,23 +307,23 @@
     <div class="small-container">
       <div class="row">
         <div class="col-5">
-          <img src="/images/bl1.jpg" alt="" />
+          <img src="./images/bl1.jpg" alt="" />
         </div>
   
         <div class="col-5">
-          <img src="/images/bl2.jpg" alt="" />
+          <img src="./images/bl2.jpg" alt="" />
         </div>
   
         <div class="col-5">
-          <img src="/images//bl3.jpg" alt="" />
+          <img src="./images//bl3.jpg" alt="" />
         </div>
   
         <div class="col-5">
-          <img src="/images/bl4.jpg" alt="" />
+          <img src="./images/bl4.jpg" alt="" />
         </div>
   
         <div class="col-5">
-          <img src="/images/bl5.jpg" alt="" />
+          <img src="./images/bl5.jpg" alt="" />
         </div>
       </div>
     </div>
@@ -335,12 +335,12 @@
           <h3>Download Our App</h3>
           <p>Download App for Android and ios.</p>
           <div class="app-logo">
-            <img src="/images/download.jpg" alt="" />
+            <img src="./images/download.jpg" alt="" />
           </div>
         </div>
 
         <div class="footer-col-2">
-          <img src="/images/logo.jpg" alt="" />
+          <img src="./images/logo.jpg" alt="" />
           <p>
             Our Purpose Is To Make the Benefits of
             Sports Accessible to the Many.
